<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExperimentLayout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="users_name_edit_text">Your name</string>
    <string name="how_are_you_doing">how are you doing ?</string>
    <string name="answer_no_button">Yes</string>
    <string name="answer_yes_button">No</string>

</resources>
