<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:gravity="center"
              android:padding="15dp"
              android:layout_margin="10dp"
              tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1st Button"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:textSize="15sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2st Button"
        android:padding="30dp"
        android:textSize="10sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3st Button"
        android:padding="30dp"
        android:textSize="10sp"/>


    <TextView
        android:text="@string/hello_world"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Good android apps"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="random text"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_are_you_doing"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_no_button"
            android:onClick="onYesButtonOnClick"
            android:id="@+id/answer_yes_button"
            android:hint="Pick me"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_yes_button"
            android:onClick="onNoButton"
            android:id="@+id/answer_no_button"
            android:hint="Not pick me"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:id="@+id/users_id_edit_text"
            android:hint="@string/users_name_edit_text"/>


    </LinearLayout>


</LinearLayout>
